preparing for heroky

--- a/app/views/relationships/edit.html.erb
+++ b/app/views/relationships/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @relationship %> |
-<%= link_to 'Back', relationships_path %>
+<%= link_to 'Show', @relationship, :class => 'btn btn-primary' %> |
+<%= link_to 'Back', relationships_path, :class => 'btn btn-home' %>
