--- a/app/views/relationships/_form.html.erb
+++ b/app/views/relationships/_form.html.erb
@@ -31,6 +31,6 @@
     <%= f.collection_select(:user_id, User.all, :id, :Name) %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Create Relationship', :class => 'btn btn-success' %>
   </div>
 <% end %>
