--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,6 +32,6 @@
     <%= f.text_area :bio %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit 'Create User', :class => 'btn btn-success' %>
   </div>
 <% end %>
