--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Users</h1>
-
-<table>
+<table class="table table-striped" name="tbl_relationship">
   <thead>
     <tr>
       <th>Name</th>
@@ -22,9 +21,9 @@
         <td><%= user.Date_of_Birth %></td>
         <td><%= user.bio %></td>
         <td><%= user.tot_fam %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user, :class => 'btn btn-primary'%></td>
+        <td><%= link_to 'Edit', edit_user_path(user), :class => 'btn btn-warning' %></td>
+        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-danger' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +31,4 @@
 
 <br>
 
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, :class => 'btn btn-success' %>
