--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,9 @@
-<h1>The Tree</h1>
-<%= link_to 'User', users_path %>
-<%= link_to 'Add Relationship', relationships_path %>
+<div style='margin:300px; margin-left:500px;'>
+     <div>
+		 <img src="/assets/Famtree.jpeg">
+	</div>
+		<div style='margin-left:20px; margin-top:20px; font-color:blue; font-size:14pt; font-family:arial;'>
+			<span style='margin-right:10px'><%= link_to 'User Profile', users_path, :class => 'btn btn-primary' %></span>
+		    <span><%= link_to 'Add Relationship', relationships_path, :class => 'btn btn-success' %></span>
+		<div>
+</div>
