--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,20 +12,20 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :Name %><br>
-    <%= f.text_field :Name %>
+    <%= f.label :name %><br>
+    <%= f.text_field :name %>
   </div>
   <div class="field">
-    <%= f.label :Mailing_Address %><br>
-    <%= f.text_field :Mailing_Address %>
+    <%= f.label :mailing_address %><br>
+    <%= f.text_field :mailing_address %>
   </div>
   <div class="field">
-    <%= f.label :Gender %><br>
-    <%= f.text_field :Gender %>
+    <%= f.label :gender %><br>
+    <%= f.text_field :gender %>
   </div>
   <div class="field">
-    <%= f.label :Date_of_Birth %><br>
-    <%= f.date_select :Date_of_Birth %>
+    <%= f.label :date_of_birth %><br>
+    <%= f.date_select :date_of_birth %>
   </div>
   <div class="field">
     <%= f.label :bio %><br>
