--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,22 +3,22 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @user.Name %>
+  <%= @user.name %>
 </p>
 
 <p>
   <strong>Mailing_Address:</strong>
-  <%= @user.Mailing_Address %>
+  <%= @user.mailing_address %>
 </p>
 
 <p>
   <strong>Gender:</strong>
-  <%= @user.Gender %>
+  <%= @user.gender %>
 </p>
 
 <p>
   <strong>Date_of_Birth :</strong>
-  <%= @user.Date_of_Birth %>
+  <%= @user.date_of_birth %>
 </p>
 
 <p>
