--- a/app/views/relationships/index.html.erb
+++ b/app/views/relationships/index.html.erb
@@ -16,7 +16,7 @@
       <tr>
         <td>  <%= Relationship.dis_name(relationship.relative_user_id) %></td>
         <td> Is the <%= relationship.relationship_type %></td>
-        <td>  Of   <%= relationship.user.Name %></td>
+        <td>  Of   <%= relationship.user.name %></td>
         <td><%= link_to 'Show', relationship, :class => 'btn btn-primary' %></td>
         <td><%= link_to 'Edit', edit_relationship_path(relationship), :class => 'btn btn-warning' %></td>
         <td><%= link_to 'Destroy', relationship, method: :delete, :class => 'btn btn-danger', data: { confirm: 'Are you sure?' } %></td>
