--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Users</h1>
+<!-- <h1>Users</h1> -->
 <table class="table table-striped" name="tbl_relationship">
   <thead>
     <tr>
@@ -28,7 +28,113 @@
     <% end %>
   </tbody>
 </table>
-
+  
 <br>
 
 <%= link_to 'New User', new_user_path, :class => 'btn btn-success' %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="assets/ico/favicon.png">
+
+    <title>user</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="assets/css/bootstrap.css" rel="stylesheet">
+    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="assets/css/main.css" rel="stylesheet">
+
+  <script src="assets/js/Chart.js"></script>
+
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+  </head>
+
+  <body>
+
+    <!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">User</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="/">HOME</a></li>
+            <li class="active"><a href="/relationships">Relationships</a></li>
+           <!--  <li><a href="services.html">SERVICES</a></li>
+            <li><a href="works.html">WORKS</a></li> -->
+            <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
+    </div>
+<!-- 
+  <div id="blue">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-8 col-lg-offset-2">
+        <h4>LEARN MORE ABOUT US</h4>
+        <p>WE ARE COOL PEOPLE</p>
+        </div>
+      </div><!-- row -->
+    </div><!-- container -->
+  </div><!--  bluewrap  -->
+
+
+  <!-- <!-- <div class="container w">
+    <div class="row centered">
+      <br><br>
+      <div class="col-lg-3">
+        <img class="img-circle" src="assets/img/pic.jpg" width="110" height="110" alt="">
+        <h4>Frank Lampard</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+        <p><a href="#">@Frank_BlackTie</a></p>
+      </div><!-- col-lg-3 -->
+
+    <!--   <div class="col-lg-3">
+        <img class="img-circle" src="assets/img/pic2.jpg" width="110" height="110" alt="">
+        <h4>David Wright</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+        <p><a href="#">@David_BlackTie</a></p>
+      </div><!-- col-lg-3 -->
+
+      <!-- <!-- <div class="col-lg-3">
+        <img class="img-circle" src="assets/img/pic3.jpg" width="110" height="110" alt="">
+        <h4>Mark Milestone</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+        <p><a href="#">@Mark_BlackTie</a></p>
+      </div><!-- col-lg-3 -->
+
+      <!-- <div class="col-lg-3">
+        <img class="img-circle" src="assets/img/pic4.jpg" width="110" height="110" alt="">
+        <h4>Tania Tissen</h4>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form.</p>
+        <p><a href="#">@Tania_BlackTie</a></p> -->
+      </div><!-- col-lg-3 
+    </div><!-- row -->
+    <br>
+    <br>
+  </div><!-- container --> 
+
+
+  <!-- PORTFOLIO SECTION -->
+  <!-- <!-- --> 
+
+      <!--  -->
