--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -77,10 +77,10 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">HOME</a></li>
-            <li class="active"><a href="/relationships">Relationships</a></li>
+            <li><a href="/relationships">Relationships</a></li>
            <!--  <li><a href="services.html">SERVICES</a></li>
             <li><a href="works.html">WORKS</a></li> -->
-            <li><a data-toggle="modal" data-target="#myModal" href="#myModal"><i class="fa fa-envelope-o"></i></a></li>
+            <!-- x -->
           </ul>
         </div><!--/.nav-collapse -->
       </div>
